# dropwsl

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  dropwsl.cmd  dropwsl.ps1  dropwsl.sh  install.cmd  install.ps1  uninstall.cmd  uninstall.ps1
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: DESIGN.md  troubleshooting.md
lib/: clean.sh  common.sh  validate.sh  wsl-helpers.ps1
lib/core/: azure-cli.sh  docker.sh  git.sh  github-cli.sh  helm.sh  kind.sh  kubectl.sh  systemd.sh  vscode.sh  wsl-vpnkit.sh
lib/project/: layers.sh  new.sh  scaffold.sh  workspace.sh
templates/devcontainer/python/: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  DECISIONS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
templates/devcontainer/python/.devcontainer/: Dockerfile  devcontainer.json  pip.conf  post-create.sh
templates/devcontainer/python/tests/: conftest.py  test_main.py
tests/: README.md  run-pester.cmd  run-pester.ps1  run-tests.sh
tests/e2e/: e2e_test_helper.bash  test_api_stack.bats  test_azure_chat_stack.bats  test_azure_foundry_stack.bats  test_azure_identity_stack.bats  test_minimal.bats  test_streamlit_stack.bats  test_uv_build.bats  test_workspace_stack.bats
tests/fixtures/: compose_empty.yaml  compose_with_service.yaml  config_2space_indent.yaml  config_all_enabled.yaml  config_empty_tools.yaml  config_homonymous_key.yaml  config_invalid.yaml  config_minimal.yaml  devcontainer_base.json  mcp_empty.json  mcp_with_servers.json
tests/helpers/: layer_test_helper.bash  mock_commands.bash  test_helper.bash
tests/install/: test_tools.bats  test_validate.bats  test_wsl_platform.bats
tests/integration/: test_dockerfile_audit.bats  test_full_cycle.bats  test_inject_compose_service.bats  test_inject_mcp_server.bats  test_inject_vscode_extension.bats  test_new_project.bats  test_scaffold.bats  test_workspace.bats
tests/pester/: cmd-fastpath.Tests.ps1  dropwsl-proxy.Tests.ps1  install.Tests.ps1  uninstall.Tests.ps1  wsl-helpers.Tests.ps1
tests/smoke/: test_validate_all.bats
tests/uninstall/: test_clean_soft.bats  test_purge.bats  test_unregister.bats
tests/unit/: test_clean_docker.bats  test_config_parser.bats  test_curl_retry.bats  test_detect_python_layout.bats  test_die_hint.bats  test_ensure_env_example.bats  (+19 more)
(+285 files in other folders)
